# bms-kneeboard-server

./: Cargo.toml  README.md  build.rs  style.css
.github/workflows/: rust.yml
bms-briefing-parser/: Cargo.toml
bms-briefing-parser/src/: lib.rs
src/: gameinfo.rs  html.rs  icon.rs  main.rs  watcher.rs  web.rs
templates/: commladder.html.twig  elements.html.twig  emergency.html.twig  iff.html.twig  index.hbs  index.html.twig  ordnance.html.twig  overview.html.twig  roe.html.twig  roster.html.twig  sitrep.html.twig  steerpoints.html.twig  support.html.twig  threatanalysis.html.twig  weather.html.twig
