[package]
name = "bms-kneeboard-server"
version.workspace = true
edition.workspace = true

[workspace]
members = [".", "bms-briefing-parser"]

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.52.0"
bms-briefing-parser = { path = "./bms-briefing-parser" }
yarte = { version = "0.15", features = ["bytes-buf", "json"] }
serde = "1.0.196"
axum = { version = "0.7.4", features = ["macros"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio = { version = "1.36.0", features = ["full"] }
serde_type_name = "0.2.0"
serde_json = "1.0.113"
convert_case = "0.6.0"
notify = "6.1.1"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
clap = { version = "4.5.2", features = ["derive"] }

[build-dependencies]
yarte = { version = "0.15", features = ["bytes-buf", "json"] }
