[package]
name = "bms-kneeboard-server"
version.workspace = true
edition.workspace = true

[workspace]
members = [".", "bms-briefing-parser"]

[workspace.package]
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bms-briefing-parser = { path = "./bms-briefing-parser" }
serde = { version = "1.0", features = ["derive"] }
tera = { version = "1.19", features = [] }
axum = { version = "0.7", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio = { version = "1", features = ["full"] }
serde_type_name = "0.2.0"
serde_json = "1.0"
convert_case = "0.6.0"
notify = "6.1.1"
once_cell = "1.19.0"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
clap = { version = "4.5", features = ["derive"] }
bms-sm = { version = "0.1.2" }
futures = "0.3.30"
tray-icon = "0.13.1"
image = "0.25.1"
winit = "0.29.15"
open = "5.1.2"

[build-dependencies]
windres = "0.2.2"
